--- a/java/TwitterMelodyGenerator/README
+++ b/java/TwitterMelodyGenerator/README
@@ -1,3 +1,9 @@
+Update Notes 2/25/2012 (Alex)
+
+- Added file I/O
+- Fully implemented random chord progressions / key changes
+- Random Synth/Bass/Drum lines are next!
+
 Update Notes 2/21/2012 (Alex)
 
 - Added and implemented compatibility with chord progressions
