Joe and I's merged generators

--- a/java/TwitterMelodyGenerator/README
+++ b/java/TwitterMelodyGenerator/README
@@ -1,3 +1,10 @@
+Update Notes 2/29/2012 (Alex)
+
+- Added fully generating synth, bass, and drums
+- Still need to do more progression work, and implement scaling attributes
+- All features should be added by the end of today or early tomorrow morning
+- After that, it's all about tweaking...
+
 Update Notes 2/25/2012 (Alex)
 
 - Added file I/O
